--- a/component/image.sty
+++ b/component/image.sty
@@ -1,4 +1,5 @@
 \RequirePackage{graphicx}
+\RequirePackage{skull}
 
 \newcommand{\ImgBackground}[2]{\includegraphics[width=#2]{img/#1_background.png}}
 \newcommand{\ImgSymbol}[2]{\includegraphics[height=#2]{img/#1_symbol.png}}
@@ -7,3 +8,5 @@
 \newcommand{\EventSymbol}{\raisebox{-0.25em}{\ImgSymbol{event}{1em}}}
 \newcommand{\ItemSymbol}{\raisebox{-0.25em}{\ImgSymbol{item}{1em}}}
 \newcommand{\OmenSymbol}{\raisebox{-0.25em}{\ImgSymbol{omen}{1em}}}
+
+\newcommand{\SkullSymbol}{\ensuremath{\skull}}
