--- a/data/label.sty
+++ b/data/label.sty
@@ -206,7 +206,12 @@
 %
 
 % Boss
+\customlabel{boss:Dracula}{德古拉}
 \customlabel{boss:Mummy}{木乃伊}
+
+% Boss (Small)
+\customlabel{boss:Bat}{蝙蝠}
+\customlabel{boss:Zombie}{殭屍}
 
 % Monster
 \customlabel{monster:small}{小怪物}
@@ -267,6 +272,7 @@
 \customlabel{roll:Haunt}{作祟}
 \customlabel{roll:Task}{任務}
 \customlabel{roll:Trait}{屬性}
+\customlabel{roll:Movement}{移動}
 
 % Usage
 \customlabel{usage:}{}
