--- a/haunt_hero.tex
+++ b/haunt_hero.tex
@@ -1,18 +1,18 @@
 %!TEX program = xelatex
 
-\documentclass[10pt, a4paper, twocolumn]{report}
+\documentclass[10pt,a4paper,twocolumn]{report}
 
 \usepackage{component/haunt}
 
-\title{Betrayal at House on the Hill}
-\author{Secrets of Survival}
+\title{\FontTitleEn Betrayal at House on the Hill}
+\author{\FontTitleEn Secrets of Survival}
 \date{}
 
 \begin{document}
 
+\pagenumbering{gobble}
 \maketitle
 \tableofcontents
-\pagenumbering{gobble}
 
 \input{src/haunt/001_hero}
 
