--- a/include/font.sty
+++ b/include/font.sty
@@ -17,7 +17,7 @@
 \setCJKfamilyfont{title}{Weibei TC Bold}
 \newcommand*\FontTitle{\CJKfamily+{title}}
 
-\newfontfamily\FontSubTitle{Chalkduster}
+\newfontfamily\FontTitleEn{Chalkduster}
 
 \setCJKfamilyfont{story}{Xingkai TC Bold}
 \newcommand*\FontStory{\CJKfamily+{story}}
