--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -322,9 +322,9 @@
   請立即進行力量檢定嘗試控制\TokenSq*{Slide}：
   \begin{itemize}
     \item[5+] 你成功控制住\TokenSq*{Slide}。移至任意較低樓層的任意一間房間中。
-    \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這你不是的回合，則無須為新房間抽取事件／道具／預兆牌。
+    \item[0-4] 你失控了！抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並受到１顆骰的物理傷害。若這你不是的回合，則無需為新房間抽取事件／道具／預兆牌。
   \end{itemize}
-  此後，任何探險者皆可透過檢定嘗試使用\TokenSq*{Slide}，而不須花費行動步數。\smallbreak
+  此後，任何探險者皆可透過檢定嘗試使用\TokenSq*{Slide}，而不需花費行動步數。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCard}{bhh}{Night View}
@@ -378,7 +378,7 @@
   選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\smallbreak
   開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找\ThisName{}的機關：
   \begin{itemize}
-    \item[3+] 你發現了\ThisName{}的機關。移動至牆後房間，而不須花費行動步數。
+    \item[3+] 你發現了\ThisName{}的機關。移動至牆後房間，而不需花費行動步數。
     \item[0-2] 你沒有辦法理解機關的奧妙。
   \end{itemize}
 \end{EventCard}%
