--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -78,9 +78,9 @@
   \begin{itemize}
     \item[6] 移至任一間房間。
     \item[5] 獲得２級力量和２級速度。
-    \item[4] 獲得２級神志和２級知識。
+    \item[4] 獲得２級知識和２級神志。
     \item[3] 獲得１級知識，並失去１級力量。
-    \item[2] 失去２級神志和２級知識。
+    \item[2] 失去２級知識和２級神志。
     \item[1] 失去２級力量和２級速度。
     \item[0] 失去２級全屬性。
   \end{itemize}
@@ -116,7 +116,7 @@
   \begin{CardStory}
     引信尚未點燃…
   \end{CardStory}
-  在你的一次攻擊中，你可以使用\ThisName{}取代攻擊，將\ThisName{}點然並扔進一間相鄰的房間。該房間的所有探險者與怪物，皆需進行速度檢定：
+  在你的一次攻擊中，你可以使用\ThisName{}取代攻擊，將\ThisName{}點然並扔進一間相鄰的房間。該房間的所有探險者與怪物，皆須進行速度檢定：
   \begin{itemize}
     \item[5+] 你躲開了炸藥的攻擊。
     \item[0-4] 受到４點物理傷害。
@@ -179,7 +179,7 @@
   \begin{CardStory}
     幫助自己從未如此容易。
   \end{CardStory}
-  當你與其他探險者處於同一房間時，可以使用\ThisName{}，任意偷取該探險者所持有的其中一項物品。\smallbreak
+  當你與其他探險者處於同一房間時，可以使用\ThisName{}，任意搶奪該探險者所持有的其中一項物品。\smallbreak
   使用後將\ThisName{}丟棄。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
