--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -8,6 +8,7 @@
   當你抽到此牌時，某種東西突然咬上了你！\smallbreak
   你的右方的玩家代替神秘生物，擲４顆骰子對你的攻擊，你以力量進行防禦。\smallbreak
   攻擊後，神秘生物又再一次隱沒在黑暗當中。\smallbreak
+  \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
@@ -40,8 +41,9 @@
   立即獲得１級力量和１級神志。\smallbreak
   若你失去\ThisName{}，立即失去１級力量和１級神志。\smallbreak
   % 使用一個小怪物標示代表這隻\ThisName{}，將牠放在你的房間裡。（不要和其他怪物搞混。）\smallbreak
-  每回合一次，你可差遣\ThisName{}來回於六格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品去丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
+  每回合一次，你可差遣\ThisName{}來回於六格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品並丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
   \ThisName{}不會被對手阻擋。牠不能通過單向的通道、或任何需要\RollAny{}的房間。牠也不能攜帶會減緩移動速度的物品。\smallbreak
+  \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
@@ -51,6 +53,7 @@
   \end{CardStory}
   立即獲得１級神志和１級知識。\smallbreak
   若你失去\ThisName{}，立即失去１級神志和１級知識。\smallbreak
+  \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
@@ -68,6 +71,7 @@
   \end{CardStory}
   立即獲得２級力量，並失去１級神志。\smallbreak
   若你失去\ThisName{}，立即失去２級力量，並獲得１級神志。\smallbreak
+  \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
@@ -120,6 +124,6 @@
     刻印著招喚死亡的文字與數字。
   \end{CardStory}
   此後每回合移動之前，你可以使用\ThisName{}窺視房間牌堆頂端的板塊。\smallbreak
-  在作祟發生之後，每當你使用\ThisName{}時，叛徒可遣任意數量的怪物向你移動１格。若你身為叛徒，則忽略此效果。若沒有叛徒，則所有怪物皆須向你前進１格。\smallbreak
+  在作祟發生後，每當你使用\ThisName{}時，叛徒可遣任意數量的怪物向你移動１格。若你身為叛徒，則忽略此效果。若沒有叛徒，則所有怪物皆須向你前進１格。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
