--- a/src/card/bww/event.tex
+++ b/src/card/bww/event.tex
@@ -131,7 +131,7 @@
   \end{CardStory}
   請選擇一項：
   \begin{itemize}
-    \item[•] 切除你的手。失去１點力量，並提升１點神智。
+    \item[•] 切除你的手。失去１點力量，並提升１點神志。
     \item[•] 替換你的手。失去１點力量，並抽取１張道具牌。
     \item[•] 保留你的手。失去２點神志，並提升１點力量。移往最鄰近有預兆圖示的房間，並抽取１張預兆牌。
   \end{itemize}
