--- a/src/card/bww/omen.tex
+++ b/src/card/bww/omen.tex
@@ -34,6 +34,7 @@
     \item[1+] 擲出的結果增加２點。
     \item[0] 擲出的結果減少２點。
   \end{itemize}
+  \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
