--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -13,8 +13,8 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 將２枚\TokenTri{Knowledge Roll}放到一旁備用。
-  \item 叛徒失去\Omen{Girl}預兆卡以及從她獲得的所有效果。取而代之，他將一枚\Monster{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Boss*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放到盡量越遠越好。
-  \item 當有玩家進到和\Omen*{Girl}同一房間時，該玩家自動持有\Omen*{Girl}預兆卡。
+  \item 叛徒失去\Omen{Girl}預兆牌以及從她獲得的所有效果。取而代之，他將一枚\Monster{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Boss*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放到盡量越遠越好。
+  \item 當有玩家進到和\Omen*{Girl}同一房間時，該玩家自動持有\Omen*{Girl}預兆牌。
 \end{itemize}
 
 \HauntSection{對於壞人你知道}
@@ -31,7 +31,7 @@
 \vspace*{-1em}
 \begin{itemize}
   \item 如果\Omen{Book}還未被探索的話，當有英雄下次探索到有預兆符號的新房間時，即搜尋預兆牌庫並抽將其取出。
-  \item 你必需說出\Boss*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
+  \item 你必須說出\Boss*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
     \begin{itemize}
       \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Boss*{Mummy}的真名：
         \begin{itemize}
