--- a/src/haunt/001_traitor.tex
+++ b/src/haunt/001_traitor.tex
@@ -7,7 +7,7 @@
   \begin{quote}
     『我失去我的妻子遠超過你所能理解之時日。縱使淚已成灰，愛仍熾熱如日。今我愛人已為我重生。生者切勿阻撓我與其重逢。』
   \end{quote}
-  隨著聲音消逝，你笑了。顯而易見。為了讓愛人重逢，你的朋友們必需死。當棺蓋滑開，你面向你的新朋友…你的新神。
+  隨著聲音消逝，你笑了。顯而易見。為了讓愛人重逢，你的朋友們必須死。當棺蓋滑開，你面向你的新朋友…你的新神。
 \end{HauntStory}
 
 \HauntSection{此刻}
