--- a/src/rule/haunt.tex
+++ b/src/rule/haunt.tex
@@ -2,4 +2,121 @@
 
 \section{作祟} \label{sec:haunt}
 
-\label{ssec:how-monsters-work}
+一旦\textbf{〈作祟 Haunt〉}發生，遊戲將會變得戲劇化。從現在起，這將是一場殊死搏鬥，並在對手之前贏得勝利！
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{執行作祟檢定} \label{ssec:making-a-haunt-roll}
+
+在作祟開始之前，若你在回合中有抽過預兆牌，則在該回合結束時必須擲６顆骰子。這個擲骰稱為\textbf{〈\Roll{Haunt} Haunt Roll〉}。如果擲骰結果小於目前已抽出的預兆牌總數，則作祟開始。擲骰的玩家即為\textbf{〈作祟揭露者 Haunt Revealer〉}。
+
+舉例來說，如果你在你的回合抽了一張預兆牌，而且這是目前為止遊戲中被抽出的第五張預兆牌，則你需要擲出 4- 才能避免作祟開始。
+
+在作祟開始後，若你探索一間有預兆符號的房間，你仍需抽預兆牌但無需進行\Roll{Haunt}。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{揭露作祟} \label{ssec:revealing-the-roll}
+
+在作祟揭露者執行\Roll{Haunt}之後，該玩家需查閱\emph{叛徒手冊}開頭的\textbf{〈作祟列表 Haunt Chart〉}，確認發生哪個作祟劇本——以及誰是\textbf{〈叛徒 Traitor〉}。
+
+作祟列表的上方表列了所有的預兆牌，左方表列了所有的房間。在上方找到作祟發生時抽取的預兆牌，並在左方找到抽取該牌時作祟揭露者所在的房間。對應的數字即為你接下來要進行的作祟劇本編號。
+
+該列表下方亦列出了每個劇本中哪位玩家將成為\textbf{叛徒}，將\emph{叛徒手冊}交給該玩家。作祟揭露者不一定會是叛徒。
+
+\textbf{特殊情況：}若兩個或以上的玩家滿足叛徒的條件，且其中之一為作祟揭露者，則該玩家即為叛徒。若這些玩家皆非作祟揭露者，則距離作祟揭露者左邊最近的玩家為叛徒。
+
+\begin{RuleBox}{選用規則：選擇作祟劇本}
+  此選用規則可以讓你避免重複進行已玩過的劇本。若你在查閱作祟列表時發現你已玩過該劇本且不想再玩一次，則選擇一間距離作祟發生的房間最近且有預兆符號\OmenSymbol{}的房間並改為在該房間發生作祟。重複以上步驟直到找到一個沒玩過的劇本。若所有的房間對應的劇本都已玩過，則改為抽取下一張預兆牌並重複相同的步驟。
+\end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{作祟設置} \label{ssec:haunt-setup}
+
+在作祟開始前，請依序執行以下步驟：
+
+\begin{itemize}
+  \item 叛徒帶著\emph{叛徒手冊}離開房間，並閱讀（\strong{且只閱讀}）該即將發生的作祟劇本。叛徒亦閱讀\namepageref{ssec:traitors-new-power}與\namepageref{ssec:how-monsters-work}。若該玩家不了寫這些規則，他亦需攜帶這本規則手冊離開房間（或請其他玩家解釋這些規則給他）。
+  \item 其餘玩家成為\textbf{〈英雄 Hero〉}，並一起閱讀\emph{生存指南}中對應的作祟劇本。（英雄們應該要簡短的討論生存策略。）
+  \item 雙方都閱讀完後，請叛徒回到房間，雙方立即進行劇本中\emph{「此刻」}章節所指示的行動。（例如在房間中放置標記或抽取卡牌。）
+\end{itemize}
+
+\begin{RuleBox}{}
+  切記務必不要讓叛徒知道你的目標，除非你確信他已經知道，或是你要進行劇本所指示的事情。有些時候，由於叛徒不知道你的意圖，你將因此握有優勢。你可以重複玩同一個劇本，但是切勿洩漏\emph{生存指南}中內容。
+\end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{作祟進行} \label{ssec:playing-the-hanut}
+
+作祟後的第一個回合從距離叛徒左邊最近的玩家開始。接下來每位英雄進行的回合稱為\textbf{〈英雄回合 Hero Turn〉}。在英雄都執行完他們的回合之後，換叛徒執行他的\textbf{〈叛徒回合 Traitor Turn〉}。在叛徒回合之後，所有怪物被該叛徒控制的怪物共同進行\textbf{〈怪物回合 Monster Turn〉}。（也就是說，叛徒有兩個回合：一個給他自己行動而另一個給怪物行動）。接著第一位玩家繼續執行回合，並重複以上流程直到遊戲結束。
+
+\textbf{英雄與叛徒仍然是探險者。}除了不需要在抽取預兆卡時進行作祟檢定之外，他們依然可以進行所有作祟發生前能做的所有行動。叛徒必須告訴英雄他在他的回合做了哪些事，但無需說明原因，同樣的條件也適用於英雄。
+
+\textbf{在作祟開始後，探險者就有可能死亡。}當你的探險者的任一屬性降至骷髏頭標誌\SkullSymbol{}時，該探險者就會死亡。在某些劇本當中，英雄的死亡將會使他成為叛徒。有些劇本會要求玩家完成等同於探險者數量的任務，該數量亦包含已死亡的探險者。
+
+有些時候，叛徒會在作祟開始時變形或是死亡，但在這種情況下叛徒依然擁有他的回合。叛徒死亡後，怪物仍然可以在叛徒的操控下完成作祟目標。
+
+在作祟發生後，任何英雄經由知識檢定獲得的知識時，所有英雄亦立即得知該資訊。
+
+\begin{RuleBox}{規則書與作祟劇本的規則衝突怎麼辦？}
+  請以劇本中為準。
+\end{RuleBox}
+
+\begin{RuleBox}{移動妨礙}
+  在作祟發生後，當探險者或怪物要離開房間時，\strong{每位}在同一個房間的對手額外消耗１點他／牠的行動點數。（英雄會妨礙叛徒與怪物，反之亦然。）
+  無論受到多少的妨礙，你每回合至少能移動一格。此規則亦適用於在\Roll{Movement}擲到０的怪物。（詳見\namepageref{ssec:how-monsters-work}。）
+\end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{叛徒的新能力}\label{ssec:traitors-new-power}
+
+當你的探險者成為了叛徒時，若你先前受到的事件卡妨礙（如\Event{Debris}或\Event{Webs}），你立即從該事件掙脫。此外，你還獲得以下能力（除非劇本額外敘述）：
+
+\begin{itemize}
+  \item \textbf{你可以使用任何房間板塊正面效果且同時忽略任何負面效果。}你可以自由穿越\Event{Revolving Wall}而無需擲骰；可以自由選擇\Room{Mystic Elevator}的目的地；但進入\Room{Coal Chute}時依舊滑落至\Room{Basement Landing}。
+  \item \textbf{你可以選擇不要執行事件卡或是\Omen{Bite}預兆卡的效果。}你必須在閱讀內容後但尚未擲骰或執行任何行動前做此決定。但若你選擇執行該效果，則必須承擔風險。
+  \item \textbf{在你的回合結束後，你接著進行怪物回合（若怪物存在），並操控怪物移動或攻擊。}在叛徒死亡後，你依然可以操控這些怪物。（在某些劇本中，怪物依然可以在你死亡之後完成你的目標。）
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{隱藏叛徒的作祟} \label{ssec:haunts-with-a-hidden-traitor}
+
+少數作祟劇本有\textbf{〈隱藏叛徒 Hidden Traitor〉}，亦即該劇本的叛徒身份為非公開情報。當隱藏叛徒的作祟開始時，找出編號從１到等同於玩家數量的未使用\Monster{small}，面朝下（Ｓ符號朝上）洗勻並分給每一位玩家。抽到１的玩家即為叛徒。在這個情況下，作祟後的第一個回合從作祟揭露者左邊的玩家開始。
+
+除非劇本額外敘述，隱藏叛徒隨時可以公開其身份——將其身份標記翻面。（舉例來說，叛徒可能想要利用他的能力以躲避屋內的陷阱或危險。）
+
+任何探險者死亡時須立即公開其身份。除了叛徒之外，沒有人可以主動公開他的身份。當然，你可以宣稱自已不是叛徒，但是其他玩家可不一定會相信。
+
+除非劇本額外敘述，無論是基於真實的情報還是虛假得猜測而認定對方為叛徒，所有探險者皆可互相攻擊。（當然，真的叛徒將得益於他的前夥伴之間的種種懷疑和不信任。）
+
+除非劇本額外敘述，所有玩家皆須在其他人可聽到的桌邊交流談話，嚴禁任何私下交談。
+
+\begin{RuleBox}{}
+  隱藏叛徒的作祟劇本並未列在\strong{叛徒手冊}中。在這種劇本裡所有的資訊（包含叛徒的能力及目標）皆寫在\strong{生存指南}裡面，且所有人皆可閱讀。
+\end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{怪物的運作}\label{ssec:how-monsters-work}
+
+怪物的運作與探險者有些為的不同。除非劇本額外敘述，怪物的運作模式如下：
+
+\begin{itemize}
+  \item \textbf{每隻怪物必須在下一隻行動前完成移動及所有行動。}
+  \item \textbf{怪物的移動模式不同。}在怪物回合的開始，根據每種怪物的速度擲骰子，擲骰的結果即為這會和怪物可以移動的格數。相同類別且相同速度的怪物（如\Boss*{Bat}或\Boss*{Zombie}），共同擲骰且共用擲骰結果。
+  \item \textbf{怪物不會被殺。}若怪物受到傷害，牠便被\textbf{〈震懾 Stunned〉}，被震懾的怪物將休息一回。當怪物被震懾時，將怪物的標記翻到背面（Ｓ符號朝上），並於牠的下個回合結束時翻回正面。被震懾的怪物不會妨礙探險者的移動。即使劇本提到了除了震懾以外怪物受傷時的行為，他們依然可以被震懾。
+  \item 如同探險者，\textbf{怪物每回合僅能攻擊一次}。許多怪物可以使用力量以外的屬性進行攻擊，但牠們不能進行任何特殊攻擊（詳見\namepageref{ssec:special-attacks}）。
+  \item 如同叛徒，\textbf{怪物亦可忽視房間板塊的負面效果}。怪物進入\Room{Coal Chute}時依舊滑落至\Room{Basement Landing}；牠可以自由穿越\Event{Revolving Wall}而無需擲骰。怪物可以自由的爬上\Room{Coal Chute}、\Room{Collapsed Room}及\Room{Gallery}。然而，怪物無法透過房間板塊的效果獲得屬性（如\Room{Larder}及\Room{Gymnasium}）。
+  \item \textbf{怪物可以使用卡牌上敘述的特殊移動}（如\Event{Secret Stairs}及\Event{Secret Passage}）。
+  \item \textbf{怪物不能探索新的房間。}
+  \item \textbf{怪物不能攜帶物品}（除非劇本額外敘述）。若一個攜帶物品的怪物被震懾，所有物品皆會落下（並將一枚\TokenPenta{Item Pile}放置在該房間）。怪物在解除震懾前無法撿起物品。
+  \item 若怪物被卡在地下且沒有方法可以到達英雄所在之處，在叛徒的回合該玩家可以從房間板塊堆中找出\Room{Stairs from Basement}並放置在一個地下的未探索門後面，並將房間板塊堆洗勻。此規則在怪物可探索房間的作祟劇本中並不適用。
+\end{itemize}
+
+\begin{RuleBox}{如果我死了，我的東西怎麼辦？}
+  當你死亡時，如果你擁有\strong{同伴}，該同伴卡以及標記繼續留在該房間。若任何探險者進入該房間，該同伴自動跟隨該探險者，並且該探險者立即獲得卡上敘述相對應的能力。其他物品在你死亡時自動掉落至地上，並將一枚\TokenPenta{Item Pile}放置在該房間。任何探險者皆可前往該房間撿取物品（及卡片）。
+\end{RuleBox}
