--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -1,18 +1,18 @@
 %!TEX program = xelatex
 
-\documentclass[10pt, a4paper, twocolumn]{report}
+\documentclass[10pt,a4paper,twocolumn]{report}
 
 \usepackage{component/haunt}
 
-\title{Betrayal at House on the Hill}
-\author{Traitor’s Tome}
+\title{\FontTitleEn Betrayal at House on the Hill}
+\author{\FontTitleEn Traitor’s Tome}
 \date{}
 
 \begin{document}
 
+\pagenumbering{gobble}
 \maketitle
 \tableofcontents
-\pagenumbering{gobble}
 
 \input{src/haunt/001_traitor}
 
