--- a/rule.tex
+++ b/rule.tex
@@ -1,36 +1,77 @@
 %!TEX program = xelatex
 
-\documentclass[10pt, a5paper]{article}
+\documentclass[10pt,twoside,titlepage]{article}
 
-\usepackage[cm]{fullpage}
+\usepackage[a5paper,includehead,margin=1.25cm]{geometry}
 \usepackage{indentfirst}
-\usepackage{enumitem}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{bhh}
 \usepackage{component/rule}
 \usepackage{component/image}
 
-\newcommand{\namepageref}[1]{p.\pageref{#1}『\nameref{#1}』章節}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{titleps}
+\newpagestyle{main}{
+  \sethead[\Large\FontTitleEn {\thepage} | {RULEBOOK}][][]
+          {}{}{{\Large\FontTitleEn {RULEBOOK} | {\thepage}}}
+}
+\pagestyle{main}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\usepackage{background}
+\usepackage{ifoddpage}
+\backgroundsetup{
+  scale=1,
+  angle=0,
+  opacity=.8,
+  contents={
+    \checkoddpage
+    \ifoddpage
+      \includegraphics[width=\paperwidth, height=\paperheight]{img/parchment_right.jpg}
+    \else
+      \includegraphics[width=\paperwidth, height=\paperheight]{img/parchment_left.jpg}
+    \fi
+  }
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newcommand{\namepageref}[1]{p.\pageref{#1}『\nameref{#1}』章節}
+\renewcommand{\thesubsection}{\thesection-\arabic{subsection}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\usepackage{enumitem}
 \setlength{\columnsep}{1cm}
 \setlength{\parindent}{2em}
 \setlength{\parskip}{0.25em}
 \setlist{leftmargin=2em,font=\bfseries}
 
-\title{Betrayal at House on the Hill}
-\author{Rulebook}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\title{\FontTitleEn Betrayal at House on the Hill}
+\author{\FontTitleEn Rulebook}
 \date{}
 
 \begin{document}
 
 \maketitle
 \tableofcontents
-\pagebreak
+\clearpage
 
 \input{src/rule/intro}
 \input{src/rule/main}
 \input{src/rule/haunt}
-% \input{src/rule/win}
-% \input{src/rule/glossary}
+\input{src/rule/win}
+
+\clearpage
+\input{src/rule/glossary}
+
+% \clearpage
+% \input{src/rule/bww}
 
 \end{document}
