--- a/src/card/bww/item.tex
+++ b/src/card/bww/item.tex
@@ -38,7 +38,7 @@
   \begin{CardStory}
     看不出來是祭司還是祭品的服裝。
   \end{CardStory}
-  每回合一次，當你進行神志或知識檢定時，你可重擲任意數量的骰子。你必須使用重擲後的結果。\smallbreak
+  每回合一次，當你進行知識或神志檢定時，你可重擲任意數量的骰子。你必須使用重擲後的結果。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
 \begin{ItemCard}{bww}{Chainsaw}{Weapon}
@@ -62,7 +62,7 @@
     用來測量這世上未知的東西。
   \end{CardStory}
   當你回合結束時，有任何對手與你處在同一房間之中，你提升１級知識。\smallbreak
-  當你攻擊時，可棄掉此牌，多擲３顆骰，但此次攻擊只能用於偷取物品。\smallbreak
+  當你攻擊時，可棄掉此牌，多擲３顆骰，但此次攻擊只能用於搶奪物品。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
 \begin{ItemCard}{bww}{Effigy}{}
