Add BWW's rules.

--- a/component/image.sty
+++ b/component/image.sty
@@ -9,4 +9,7 @@
 \newcommand{\ItemSymbol}{\raisebox{-0.25em}{\ImgSymbol{item}{1em}}}
 \newcommand{\OmenSymbol}{\raisebox{-0.25em}{\ImgSymbol{omen}{1em}}}
 
+\newcommand{\DumbwaiterSymbol}{升降梯}
+\newcommand{\QuestionSymbol}{？}
+
 \newcommand{\SkullSymbol}{\ensuremath{\skull}}
