--- a/data/label.sty
+++ b/data/label.sty
@@ -41,7 +41,7 @@
 \customlabel{room:Patio}{天井}
 \customlabel{room:Pentagram Chamber}{五芒星室}
 \customlabel{room:Research Laboratory}{研究室}
-\customlabel{room:Servants’ Quarters}{僕人房}
+\customlabel{room:Servants' Quarters}{僕人房}
 \customlabel{room:Stairs from Basement}{地下樓梯}
 \customlabel{room:Statuary Corridor}{雕像長廊}
 \customlabel{room:Storeroom}{儲物室}
@@ -69,7 +69,7 @@
 \customlabel{room:Study}{讀書室}
 \customlabel{room:Theater}{放映室}
 \customlabel{room:Tree House}{樹屋}
-\customlabel{room:Widow’s Walk}{寡婦望}
+\customlabel{room:Widow's Walk}{寡婦望}
 \customlabel{room:Sewing Room}{裁縫室}
 
 \customlabel{room:Front Door}{前門}
@@ -99,7 +99,7 @@
 \customlabel{event:Image in the Mirror}{鏡中影像}
 \customlabel{event:rorriM eht ni egamI}{像影中鏡}
 \customlabel{event:It is Meant to Be}{命中註定}
-\customlabel{event:Jonah’s Turn}{約拿的回合}
+\customlabel{event:Jonah's Turn}{約拿的回合}
 \customlabel{event:Lights Out}{燈熄了}
 \customlabel{event:Locked Safe}{上鎖的保險箱}
 \customlabel{event:Mists From the Walls}{壁上霧靄}
@@ -156,9 +156,9 @@
 \customlabel{item:Lucky Stone}{幸運石}
 \customlabel{item:Medical Kit}{醫療包}
 \customlabel{item:Music Box}{音樂盒}
-\customlabel{item:Pickpocket’s Glove}{盜賊手套}
+\customlabel{item:Pickpocket's Glove}{盜賊手套}
 \customlabel{item:Puzzle Box}{益智方塊}
-\customlabel{item:Rabbit’s Foot}{兔足}
+\customlabel{item:Rabbit's Foot}{兔足}
 \customlabel{item:Revolver}{左輪手槍}
 \customlabel{item:Sacrificial Dagger}{獻祭匕首}
 \customlabel{item:Smelling Salts}{嗅鹽}
