--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -5,7 +5,7 @@
 \usepackage{component/haunt}
 
 \title{\FontTitleEn Betrayal at House on the Hill}
-\author{\FontTitleEn Traitor’s Tome}
+\author{\FontTitleEn Traitor's Tome}
 \date{}
 
 \begin{document}
