--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -262,7 +262,7 @@
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
-\begin{EventCard}{bhh}{Jonah’s Turn}
+\begin{EventCard}{bhh}{Jonah's Turn}
   \begin{CardStory}
     兩個小男孩在玩陀螺。\\
     男孩：「約拿，你也想玩呀？」\\
