--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -175,7 +175,7 @@
   當持有\ThisName{}被催眠時，\ThisName{}掉落至地面，並保持開啟狀態。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Pickpocket’s Glove}{}
+\begin{ItemCard}{bhh}{Pickpocket's Glove}{}
   \begin{CardStory}
     幫助自己從未如此容易。
   \end{CardStory}
@@ -194,7 +194,7 @@
   \end{itemize}
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Rabbit’s Foot}{}
+\begin{ItemCard}{bhh}{Rabbit's Foot}{}
   \begin{CardStory}
     帶來幸運的左後腳，\\
     但那隻兔子就不怎麼幸運了…
