--- a/src/rule/bww.tex
+++ b/src/rule/bww.tex
@@ -1,3 +1,61 @@
 %!TEX root = ../../rule.tex
 
 \section{寡婦望} \label{sec:bww}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{新卡牌及板塊}
+
+在遊戲開始前，將擴充的事件卡、道具卡、預兆卡、房間板塊與基礎遊戲的一起洗勻。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{術語表更新}
+
+\paragraph{〈同伴 Companion〉}
+\Omen{Cat}、\Omen{Dog}、\Omen{Girl}、\Omen{Madman}——這幾張預兆卡屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
+
+\paragraph{〈室外 Outside〉}
+\Room{Balcony}、\Room{Conservatory}、\Room{Gardens}、\Room{Graveyard}、\Room{Patio}、\Room{Roof Landing}、\Room{Solarium}、\Room{Tower}、\Room{Tree House}、\Room{Widow's Walk}屬於室外。
+
+\paragraph{〈武器 Weapon〉}
+道具\Item{Axe}、\Item{Blood Dagger}、\Item{Boomstick}、\Item{Chainsaw}、\Item{Revolver}、\Item{Sacrificial Dagger}及預兆\Omen{Spear}屬於武器。
+
+\paragraph{〈窗戶 Windows〉}
+\Room{Bedroom}、\Room{Chapel}、\Room{Dining Room}、\Room{Drawing Room}、\Room{Grand Staircase}、\Room{Master Bedroom}、\Room{Sewing Room}有窗戶。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{頂樓}
+
+〈頂樓 Roof〉是一個新的樓層。在遊戲開始前，將\Room{Roof Landing}放入屋內。任何背面寫有樓上或頂樓的房間接可以放在頂樓。頂樓並非第二個樓上；舉例來說，當你使用\Room{Mystic Elevator}擲到４時你只能前往頂樓。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{平台}
+
+\Room{Basement Landing}、\Room{Grand Staircase}／\Room{Foyer}／\Room{Entrance Hall}、\Room{Upper Landing}、\Room{Roof Landing}皆為\Room{Landing}。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{新符號}
+
+\DumbwaiterSymbol{}符號代表該房間有個升降機。你可以使用升降機並多耗１點行動點數移動到往上一層或往下一層的\Room{Landing}。使用升降機除了需多耗１點行動點數，亦須遵守其他移動規則。舉例來說，若\Room{Menagerie}在地下，且你欲從該房透過升降機移動到\Room{Foyer}，則你需要消耗２點行動點數；若\Room{Menagerie}在地面，則你可以消耗２點行動點數移動到\Room{Basement Landing}或\Room{Upper Landing}。若你沒有足夠的行動點數，則無法使用升降機。
+
+\QuestionSymbol{}符號代表你探索該房時可以抽取任何一種卡牌。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{探險者標記}
+
+共有36個、６色的探險者標記，用來標示該探險者擁有某物或完成某事。當你使用\Room{Chapel}、\Room{Gymnasium}、\Room{Larder}、\Room{Library}、\Room{Menagerie}、\Room{Study}房間的能力後，將你的探險者標記放置在那個房間。之後你再進入該房間時，便無法再使用房間的能力。探險者標記亦可用於作祟劇本。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{障礙物及鎖}
+
+\TokenSq{Obstacle}與\TokenSq{Lock}會阻礙探險者移動，欲通過則必須達成某些特殊條件。除非作祟劇本額外敘述，否則叛徒與怪物可忽視這些阻礙標記自由移動。
+
+\begin{RuleBox}{選用規則：只玩新的作祟劇本}
+  若你在一個基礎房間因一個基礎預兆觸發作祟，則將會是一個基礎作祟劇本。如果你只想玩擴充的作祟劇本，你可以棄掉該張預兆卡改抽下一張，直到找到一個擴充的預兆卡。或是你也可以棄掉該房間板塊改抽下一個，直到找到一個擴充的房間板塊。若所有的預兆卡及房間板塊都已經在遊戲內了，則選擇最晚放入遊戲的擴充預兆卡或房間板塊。
+\end{RuleBox}
