--- a/src/rule/glossary.tex
+++ b/src/rule/glossary.tex
@@ -125,7 +125,7 @@
 若你擊敗一名對手並可造成２點以上的物理傷害，你可以改為從他那邊搶奪一個可交易的物品而不造成傷害。詳見\namepageref{ssec:special-attacks}。
 
 \paragraph{〈震懾 Stunned〉}
-除非劇本額外敘述，當怪物被擊敗時並不會死。當怪物受到傷害時，牠被震懾並跳過他的下一個回合。被震懾的怪物不會妨礙牠的對手移動。
+除非作祟劇本額外敘述，否則怪物被擊敗時並不會死。當怪物受到傷害時，牠被震懾並跳過他的下一個回合。被震懾的怪物不會妨礙牠的對手移動。
 
 \paragraph{〈符號 Symbol〉}
 每張卡牌上皆有印製一個符號。渡鴉符號\OmenSymbol{}代表預兆，牛頭符號\ItemSymbol{}代表道具，漩渦符號\EventSymbol{}代表事件。有些房間上亦有這些符號，第一位進入該房間的探險者須停止移動並抽取對應的卡牌。
@@ -157,8 +157,8 @@
 所有的探險者皆可使用物品（包含道具及大多預兆），少數怪物亦可以使用物品。使用物品即用它發動攻擊、擲骰檢定、或其他用到該物品的動作。對於每個物品，你每回合僅能使用一次。
 
 \paragraph{〈窗戶 Windows〉}
-除了門之外，有些房間有一至多個窗戶。你正常不能穿越窗戶，但是部分作祟劇本有基於窗戶的相關規則。\Room{Bedroom}、\Room{Grand Staircase}、\Room{Master Bedroom}、\Room{Chapel}、\Room{Dining Room}有窗戶。
+除了門之外，有些房間有一至多個窗戶。你正常不能穿越窗戶，但是部分作祟劇本有基於窗戶的相關規則。\Room{Bedroom}、\Room{Chapel}、\Room{Dining Room}、\Room{Grand Staircase}、\Room{Master Bedroom}有窗戶。
 
 \begin{RuleBox}{碰到規則沒提到的事情怎麼辦？}
-  這遊戲經過好幾個小時的測試，但依然可能有些規則書及作祟劇本沒考慮到的狀況。別讓這狀況影響遊戲進行，在這種情況，與其他玩家達成協議並繼續玩下去。（如果無法決定，可以執嘗試硬幣決定。）
+  這遊戲經過好幾個小時的測試，但依然可能有些規則書及作祟劇本沒考慮到的狀況。別讓這狀況影響遊戲進行，在這種情況，與其他玩家達成協議並繼續玩下去。（如果無法決定，可以嘗試擲硬幣決定。）
 \end{RuleBox}
