--- a/src/rule/intro.tex
+++ b/src/rule/intro.tex
@@ -19,7 +19,7 @@
 \subsection{初始設置}
 
 \begin{itemize}
-  \item \textbf{把〈叛徒手冊 Traitor’s Tome〉和〈生存指南 Secrets of Survival〉擺到一邊。}在作祟發生後，你才會需要他們。
+  \item \textbf{把〈叛徒手冊 Traitor's Tome〉和〈生存指南 Secrets of Survival〉擺到一邊。}在作祟發生後，你才會需要他們。
   \item \textbf{每位玩家選擇一張角色卡。}卡片兩面各有一名角色，選擇其中一面。
   \item \textbf{在角色卡片四邊放上塑膠指標夾}，並對其角色各屬性的綠色起始數值。
   \item \textbf{洗牌。}將所有事件牌面朝下洗勻，並放置在一個大家都拿得到的地方。對道具牌、預兆牌也做同樣的事情。
