--- a/rule.tex
+++ b/rule.tex
@@ -71,7 +71,13 @@
 \clearpage
 \input{src/rule/glossary}
 
-% \clearpage
-% \input{src/rule/bww}
+\appendix
+\addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
+\clearpage
+\input{src/rule/bww}
+
+\clearpage
+\thispagestyle{empty}
+\cleardoublepage
 
 \end{document}
