--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -41,7 +41,7 @@
   立即獲得１級力量和１級神志。\smallbreak
   若你失去\ThisName{}，立即失去１級力量和１級神志。\smallbreak
   % 使用一個小怪物標示代表這隻\ThisName{}，將牠放在你的房間裡。（不要和其他怪物搞混。）\smallbreak
-  每回合一次，你可差遣\ThisName{}來回於六格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品並丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
+  每回合一次，你可差遣\ThisName{}來回於６格內的房間（可以使用門和樓梯），途中牠可以攜帶一件物品並丟下，同時也可以撿拾並帶回一件掉落的物品。\smallbreak
   \ThisName{}不會被對手阻擋。牠不能通過單向的通道、或任何需要\RollAny{}的房間。牠也不能攜帶會減緩移動速度的物品。\smallbreak
   \ThisName{}不是物品。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
