--- a/card.tex
+++ b/card.tex
@@ -1,17 +1,6 @@
 %!TEX program = xelatex
 
-\documentclass[10pt, a4paper]{article}
-
-\usepackage{fullpage}
-\usepackage{enumitem}
-
-\usepackage{bhh}
-\usepackage{component/card}
-
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{0pt}
-\setlength{\lineskip}{0pt}
-\setlist{leftmargin=2em,font=\bfseries}
+\documentclass{card}
 
 \title{Betrayal at House on the Hill}
 \author{Card}
