--- a/haunt_hero.tex
+++ b/haunt_hero.tex
@@ -1,8 +1,6 @@
 %!TEX program = xelatex
 
-\documentclass[10pt,a4paper,twocolumn]{report}
-
-\usepackage{component/haunt}
+\documentclass{haunt}
 
 \title{\FontTitleEn Betrayal at House on the Hill}
 \author{\FontTitleEn Secrets of Survival}
