--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -3,7 +3,8 @@
 \chapter{The Mummy Walks 木乃伊橫行}
 
 \begin{HauntStory}
-  房內塵土飛揚，你心中閃過不祥的陰霾。你聽見你其中一個朋友放聲大叫，聲音中充滿了欣喜與恐懼。一段冰冷、消沉的聲音在你心中顫抖：
+  房內塵土飛揚，你心中閃過不祥的陰霾。你聽見其中一個朋友放聲大叫，聲音中充滿了欣喜與恐懼。一段冰冷、消沉的聲音在你心中顫抖：
+
   \begin{quote}
     『我失去我的妻子遠超過你所能理解之時日。縱使淚已成灰，愛仍熾熱如日。今我愛人已為我重生。你必不能使我等分離…若你膽敢阻擾，我必將你靈魂生吞活剝。』
   \end{quote}
@@ -49,8 +50,10 @@
 \HauntSection{如果你獲勝…}
 \begin{HauntStory}
   在你猛力合上古書時，房間內掀起一陣溫熱且乾燥的風。木乃伊蹣跚地走向你，它死寂的眼中充滿絕望。當它就要掐住你的喉嚨時，它的雙手忽然碎裂了。隨著它的身體逐漸崩解並隨熱風飛散，那生物呻吟著：
+
   \begin{quote}
     『我的妻子…我唯一摰愛…永世…不見…』
   \end{quote}
+
   隨著最後一片木乃伊消失，風停了。只剩下你形單影隻。
 \end{HauntStory}
