--- a/src/rule/bww.tex
+++ b/src/rule/bww.tex
@@ -56,6 +56,10 @@
 
 \TokenSq{Obstacle}與\TokenSq{Lock}會阻礙探險者移動，欲通過則必須達成某些特殊條件。除非作祟劇本額外敘述，否則叛徒與怪物可忽視這些阻礙標記自由移動。
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection*{}
+
 \begin{RuleBox}{選用規則：只玩新的作祟劇本}
   若你在一個基礎房間因一個基礎預兆觸發作祟，則將會是一個基礎作祟劇本。如果你只想玩擴充的作祟劇本，你可以棄掉該張預兆卡改抽下一張，直到找到一個擴充的預兆卡。或是你也可以棄掉該房間板塊改抽下一個，直到找到一個擴充的房間板塊。若所有的預兆卡及房間板塊都已經在遊戲內了，則選擇最晚放入遊戲的擴充預兆卡或房間板塊。
 \end{RuleBox}
