--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -2,7 +2,7 @@
 
 \section{主要規則} \label{sec:main}
 
-遊戲從起始玩家開始，並向左順時針進行，探險者輪流進行回合並探索屋子。
+遊戲從起始玩家開始，並向左順時針進行，輪流進行回合並探索屋子。
 
 為了簡單起見，所有規則中的『你』皆指正在進行動作或受到卡牌、房屋板塊規則影響的角色——探險者（包含英雄與叛徒）以及怪物。
 
@@ -54,7 +54,7 @@
 
 你可以穿越門並移動到相鄰的房間。所有門都是開著的，唯一的例外是\Room{Front Door}，這扇門永遠都是鎖著的。你無法離開這個幢房屋或使用\Room{Front Door}（除非作祟劇本有特別規定）。所有室外的房間（如\Room{Patio}）亦屬於房屋的一部分。
 
-樓層間透過樓梯相連。\Room{Grand Staircase}永遠都連到\Room{Upper Landing}；\Room{Stairs from Basement}永遠都連到\Room{Foyer}的秘門，但這扇秘門在\Room{Stairs from Basement}被探索前皆不可使用。
+樓層間透過樓梯相連。\Room{Grand Staircase}永遠都連到\Room{Upper Landing}；\Room{Stairs from Basement}永遠都連到\Room{Foyer}的秘門，但這扇秘門在\Room*{Stairs from Basement}被探索前皆不可使用。
 
 有些房間有特殊符號，代表預兆牌、道具牌、事件牌（詳見\namepageref{ssec:draw-event-item-and-omen-cards}）。有些房間也會有文字敘述，這些文字會在探險者進入或離開房間時發動。如果房間同時有文字與符號，先為特殊符號抽牌，再執行文字敘述的內容。
 
