--- a/include/bhh.sty
+++ b/include/bhh.sty
@@ -1,5 +1,6 @@
 \RequirePackage{include/font}
 \RequirePackage{include/util}
 \RequirePackage{include/text}
+\RequirePackage{include/image}
 
 \RequirePackage{data/label}
