--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -233,7 +233,7 @@
     並透過鏡子遞給他一件物品…
 \end{CardStory}
   若你手上沒有道具牌，則由下一位持有道具牌的玩家觸發此效果。\smallbreak
-  選擇１張你所擁有的道具牌，洗入道具牌庫中。獲得１級知識。\smallbreak
+  選擇１張你所擁有的道具牌，洗入道具牌堆中。獲得１級知識。\smallbreak
 \end{EventCard}%
 \linebreak[0]%
 \begin{EventCardSp}{bhh}{\scalebox{-1}[1]{Image in the Mirror}}{\scalebox{-1}[1]{鏡中影像}}
@@ -257,7 +257,7 @@
   \end{CardStory}
   請選擇一項事件發生：
   \begin{itemize}
-    \item[•] 窺視道具、事件、或預兆牌庫的前三張牌，依任意順序放回去，但不得說出看到的內容。
+    \item[•] 窺視道具、事件、或預兆牌堆的前三張牌，依任意順序放回去，但不得說出看到的內容。
     \item[•] 擲４顆骰子並記錄結果。在未來任何\RollAny{}，可直接使用這個結果，但不得超過該\RollAny{}的最大可能值（僅限一次）。
   \end{itemize}
 \end{EventCard}%
