--- a/include/text.sty
+++ b/include/text.sty
@@ -31,7 +31,7 @@
 % Boss
 \makeatletter
 \newcommand*{\Boss}{\@ifstar\@BossStar\@BossNoStar}
-\newcommand{\@BossNoStar}[1]{〈\ref{boss:#1}{}~#1〉標記}
+\newcommand{\@BossNoStar}[1]{〈\ref{boss:#1}{}~#1〉大型圓形標記}
 \newcommand{\@BossStar}[1]{\ref{boss:#1}{}}
 \makeatother
 
