--- a/data/label.sty
+++ b/data/label.sty
@@ -211,10 +211,10 @@
 
 % Boss (Small)
 \customlabel{boss:Bat}{蝙蝠}
+\customlabel{boss:Ghost}{鬼魂}
 \customlabel{boss:Zombie}{殭屍}
 
 % Monster
-\customlabel{monster:small}{小怪物}
 \customlabel{monster:red}{紅色怪物}
 \customlabel{monster:orange}{橙色怪物}
 \customlabel{monster:yellow}{黃色怪物}
