--- a/include/font.sty
+++ b/include/font.sty
@@ -11,6 +11,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\xeCJKsetup{PunctStyle=CCT}
+
 \setmainfont[AutoFakeBold,AutoFakeSlant]{Libian TC Regular}
 \setCJKmainfont[AutoFakeBold,AutoFakeSlant]{Libian TC Regular}
 
