--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -541,8 +541,8 @@
       \begin{itemize}
         \item[6] \Room{Entrance Hall}。
         \item[4-5] \Room{Upper Landing}。
-        \item[2-3] 抽取一張樓上的房間板塊。
-        \item[0-1] 抽取一張地下的房間板塊。
+        \item[2-3] 抽取一張樓上房間板塊。
+        \item[0-1] 抽取一張地下房間板塊。
       \end{itemize}
       若已無未探索房間板塊，則直接前往\Room{Entrance Hall}。
   \end{itemize}
