--- a/src/haunt/001_traitor.tex
+++ b/src/haunt/001_traitor.tex
@@ -4,36 +4,32 @@
 
 \begin{HauntStory}
   在你面前的牆壁振動並滑開，顯露出一具古代石棺，它彎曲的棺蓋遍佈灰塵與象形文字。象形文字發出柔和的光芒，吸引你靠近。一道刺耳的話語滑進你的心靈，說道：
-
   \begin{quote}
     『我失去我的妻子遠超過你所能理解之時日。縱使淚已成灰，愛仍熾熱如日。今我愛人已為我重生。生者切勿阻撓我與其重逢。』
   \end{quote}
-
   隨著聲音消逝，你笑了。顯而易見。為了讓愛人重逢，你的朋友們必須死。當棺蓋滑開，你面向你的新朋友…你的新神。
 \end{HauntStory}
 
 \HauntSection{此刻}
 \vspace*{-1em}
 \begin{itemize}
-  \item 你的探險者依然在在遊戲內，但是變成了叛徒。
-  \item 在你所在的房間放置一枚\Boss{Mummy}以及一枚\TokenPenta{Item}（代表石棺 Sarcophagus）。
+  \item 你的探險者仍在遊戲內，但是變成了叛徒。
+  \item 在你所在的房間放置一枚\BossLarge{Mummy}以及一枚\TokenPenta{Item}（代表石棺 Sarcophagus）。
   \item 你失去\Omen{Girl}預兆牌以及從她獲得的所有效果，並將此卡放置在一旁。取而代之，將一枚\Monster{magenta}（代表\Omen*{Girl}），擺放到任何與作祟揭露房間同樓層，並且距離\Boss*{Mummy}五格以上的房間。如果沒有距離五格以上的房間，則擺放在該樓層盡量越遠越好。
   \item 當有探險者進到和\Omen*{Girl}同一房間時，該玩家自動持有\Omen*{Girl}預兆牌。
   \item 如果你持有\Omen*{Girl}，若你與\Boss*{Mummy}處於同一房間，可以將\Omen*{Girl}獻給\Boss*{Mummy}，讓\Boss*{Mummy}掌控\Omen*{Girl}。
 \end{itemize}
 
 \HauntSection{對於英雄你知道}
-
 他們正試圖於將\Boss*{Mummy}驅逐回亡者之國。
 
 \HauntSection{你獲勝於…}
-
 …在\Boss*{Mummy}掌控\Omen*{Girl}、持有\Omen{Ring}或是\Omen{Holy Symbol}，並且帶著它們回到有石棺的房間裡。另外你亦獲勝於所有英雄皆死亡的時候。若\Omen*{Ring}與\Omen*{Holy Symbol}皆不在遊戲中，則下次你探索到有\OmenSymbol{}符號的房間時，直接搜尋預兆牌堆並抽將其中之一取出，然後洗勻排堆。
 
 \vfill\null\pagebreak
 
-\HauntMobStatusSection{〈\Boss*{Mummy} Mummy〉}
-\HauntMobStatus{速度３\quad{}力量８\quad{}神智５}
+\HauntMobStatusSection{\Boss{Mummy}}
+\HauntMobStatus{速度３\quad{}力量８\quad{}神志５}
 
 如果\Boss*{Mummy}在\Roll{Movement}時擲出０或是１的話，祂可以使用秘密通道移動至屋內任何一間房間。
 
