--- a/src/rule/bww.tex
+++ b/src/rule/bww.tex
@@ -28,7 +28,7 @@
 
 \subsection{頂樓}
 
-〈頂樓 Roof〉是一個新的樓層。在遊戲開始前，將\Room{Roof Landing}放入屋內。任何背面寫有樓上或頂樓的房間接可以放在頂樓。頂樓並非第二個樓上；舉例來說，當你使用\Room{Mystic Elevator}擲到４時你只能前往頂樓。
+〈頂樓 Roof〉是一個新的樓層。在遊戲開始前，將\Room{Roof Landing}放入屋內。任何背面寫有樓上或頂樓的房間皆可以放在頂樓。頂樓並非第二個樓上；舉例來說，當你使用\Room{Mystic Elevator}擲到４時你只能前往頂樓。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
