--- a/src/rule/haunt.tex
+++ b/src/rule/haunt.tex
@@ -85,7 +85,7 @@
 
 \subsection{隱藏叛徒的作祟} \label{ssec:haunts-with-a-hidden-traitor}
 
-少數作祟劇本有\textbf{〈隱藏叛徒 Hidden Traitor〉}，亦即該劇本的叛徒身份為非公開情報。當隱藏叛徒的作祟開始時，找出編號從１到等同於玩家數量的未使用\Monster{small}，面朝下（Ｓ符號朝上）洗勻並分給每一位玩家。抽到１的玩家即為叛徒。在這個情況下，作祟後的第一個回合從作祟揭露者左邊的玩家開始。
+少數作祟劇本有\textbf{〈隱藏叛徒 Hidden Traitor〉}，亦即該劇本的叛徒身份為非公開情報。當隱藏叛徒的作祟開始時，找出編號從１到等同於玩家數量的未使用\Monster{red}，面朝下（Ｓ符號朝上）洗勻並分給每一位玩家。抽到１的玩家即為叛徒。在這個情況下，作祟後的第一個回合從作祟揭露者左邊的玩家開始。
 
 除非劇本額外敘述，隱藏叛徒隨時可以公開其身份——將其身份標記翻面。（舉例來說，叛徒可能想要利用他的能力以躲避屋內的陷阱或危險。）
 
