--- a/haunt_traitor.tex
+++ b/haunt_traitor.tex
@@ -8,8 +8,8 @@
 
 \pagenumbering{gobble}
 \maketitle
-\tableofcontents
 
 \input{src/haunt/001_traitor}
+\input{src/haunt/002_traitor}
 
 \end{document}
