--- a/src/haunt/001_hero.tex
+++ b/src/haunt/001_hero.tex
@@ -4,7 +4,6 @@
 
 \begin{HauntStory}
   房內塵土飛揚，你心中閃過不祥的陰霾。你聽見其中一個朋友放聲大叫，聲音中充滿了欣喜與恐懼。一段冰冷、消沉的聲音在你心中顫抖：
-
   \begin{quote}
     『我失去我的妻子遠超過你所能理解之時日。縱使淚已成灰，愛仍熾熱如日。今我愛人已為我重生。你必不能使我等分離…若你膽敢阻擾，我必將你靈魂生吞活剝。』
   \end{quote}
@@ -19,11 +18,9 @@
 \end{itemize}
 
 \HauntSection{對於壞人你知道}
-
 叛徒致力達成\Boss*{Mummy}與\Omen*{Girl}的婚事。
 
 \HauntSection{你獲勝於…}
-
 …在\Boss*{Mummy}娶到\Omen*{Girl}之前，將其驅散回亡者之國時。
 
 \vfill\null\pagebreak
@@ -33,27 +30,25 @@
 \begin{itemize}
   \item 如果\Omen{Book}還未被探索的話，則下次當有英雄探索到有\OmenSymbol{}符號的新房間時，直接搜尋預兆牌堆並抽將其取出，然後洗勻排堆。
   \item 你必須說出\Boss*{Mummy}的真名以驅散它。為此，你必需依照順序完成下列步驟。每一位英雄在一回合中只能嘗試其中一個步驟。
-    \begin{itemize}
-      \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Boss*{Mummy}的真名：
         \begin{itemize}
-          \item 有〈石棺 Sarcophagus〉的房間，研究象形文字；
-          \item \Room{Research Laboratory}，瀏覽考古團隊的筆記；
-          \item \Room{Library}，研究\Boss*{Mummy}的歷史；
+          \item 英雄可以在下列房間內進行知識檢定達 6+ 嘗試找出\Boss*{Mummy}的真名：
+                \begin{itemize}
+                  \item 有〈石棺 Sarcophagus〉的房間，研究象形文字；
+                  \item \Room{Research Laboratory}，瀏覽考古團隊的筆記；
+                  \item \Room{Library}，研究\Boss*{Mummy}的歷史；
+                \end{itemize}
+                如果檢定成功，拿取１枚\TokenTri{Knowledge Roll}。
+          \item 在你找出\Boss*{Mummy}真名之後，持有\Omen*{Book}的英雄可以進行知識檢定達 6+ 嘗試在\Omen*{Book}中找出\Boss*{Mummy}的真名並學會驅散它的咒語。如果檢定成功，拿取１枚\TokenTri{Knowledge Roll}。
+          \item 當你獲得２枚\TokenTri{Knowledge Roll}之後，把\Omen*{Book}帶到\Boss*{Mummy}所在的房間。任何和\Boss*{Mummy}及\Omen*{Book}在同一間房間內的英雄可以進行神志攻擊以擊敗\Boss*{Mummy}，以此完成咒語並永久驅散\Boss*{Mummy}。
         \end{itemize}
-        如果你成功了，拿取１枚\TokenTri{Knowledge Roll}。
-      \item 在你找出\Boss*{Mummy}真名之後，持有\Omen*{Book}的英雄可以進行知識檢定達 6+ 嘗試在\Omen*{Book}中找出\Boss*{Mummy}的真名並學會驅散它的咒語。如果你成功了，拿取１枚\TokenTri{Knowledge Roll}。
-      \item 當你獲得２枚\TokenTri{Knowledge Roll}之後，把\Omen*{Book}帶到\Boss*{Mummy}所在的房間。任何和\Boss*{Mummy}及\Omen*{Book}在同一間房間內的英雄可以進行神志攻擊以擊敗\Boss*{Mummy}，以此完成咒語並永久驅散\Boss*{Mummy}。
-    \end{itemize}
   \item \Boss*{Mummy}對速度攻擊免疫（例如\Item{Revolver}、\Item{Dynamite}）。
 \end{itemize}
 
 \HauntSection{如果你獲勝…}
 \begin{HauntStory}
   在你猛力合上古書時，房間內掀起一陣溫熱且乾燥的風。木乃伊蹣跚地走向你，它死寂的眼中充滿絕望。當它就要掐住你的喉嚨時，它的雙手忽然碎裂了。隨著它的身體逐漸崩解並隨熱風飛散，那生物呻吟著：
-
   \begin{quote}
     『我的妻子…我唯一摰愛…永世…不見…』
   \end{quote}
-
   隨著最後一片木乃伊消失，風停了。只剩下你形單影隻。
 \end{HauntStory}
